--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,6 @@ certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
 decorator==4.4.2
-faiss==1.7.0
 filelock==3.0.12
 flatbuffers==1.12
 future==0.18.2
@@ -24,10 +23,6 @@ joblib==1.0.1
 Keras-Preprocessing==1.1.2
 llvmlite==0.36.0
 Markdown==3.3.4
-metrics-eval==0.0.2
-mkl-fft==1.3.0
-mkl-random==1.1.1
-mkl-service==2.3.0
 networkx==2.5.1
 nltk==3.6.1
 numba==0.53.1
@@ -62,7 +57,6 @@ termcolor==1.1.0
 threadpoolctl==2.1.0
 tokenizers==0.10.2
 torch==1.6.0
-torchaudio==0.6.0a0+f17ae39
 torchvision==0.7.0
 tqdm==4.60.0
 transformers==4.5.0
@@ -70,3 +64,5 @@ urllib3==1.26.4
 Werkzeug==1.0.1
 wrapt==1.12.1
 zipp==3.4.1
+faiss-cpu
+metrics-eval
